[package]
name = "escape-forgotten-temple"
version = "0.1.0"
edition = "2024"
authors = ["Umar Khan"]
description = "A text-based adventure game where you navigate through a forgotten temple"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# No external dependencies required
